Update spring cloud deployer local to 1.1.0.RELEASE

--- a/jdbchdfs-local-task-app-dependencies/pom.xml
+++ b/jdbchdfs-local-task-app-dependencies/pom.xml
@@ -16,7 +16,7 @@
 
 	<properties>
 		<spark.version>1.6.2</spark.version>
-		<local.deployer.version>1.0.0.BUILD-SNAPSHOT</local.deployer.version>
+		<local.deployer.version>1.1.0.RELEASE</local.deployer.version>
 	</properties>
 
     <dependencyManagement>
