--- a/jdbchdfs-local-task-app-dependencies/pom.xml
+++ b/jdbchdfs-local-task-app-dependencies/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>jdbchdfs-local-task-app-dependencies</artifactId>
-    <version>1.1.0.RC1</version>
+    <version>1.1.0.BUILD-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>jdbchdfs-local-task-app-dependencies</name>
     <description>Spring Cloud Task JdbcHdfs Local App Dependencies</description>
@@ -11,7 +11,7 @@
     <parent>
         <groupId>org.springframework.cloud.task.app</groupId>
         <artifactId>task-app-starters-core-dependencies</artifactId>
-        <version>1.1.0.RC1</version>
+        <version>1.1.0.BUILD-SNAPSHOT</version>
     </parent>
 
 	<properties>
@@ -24,7 +24,7 @@
             <dependency>
                 <groupId>org.springframework.cloud.task.app</groupId>
                 <artifactId>spring-cloud-starter-task-jdbchdfs-local</artifactId>
-                <version>1.1.0.RC1</version>
+                <version>1.1.0.BUILD-SNAPSHOT</version>
             </dependency>
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
