--- a/jdbchdfs-local-task-app-dependencies/pom.xml
+++ b/jdbchdfs-local-task-app-dependencies/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>jdbchdfs-local-task-app-dependencies</artifactId>
-    <version>1.1.0.RELEASE</version>
+    <version>1.1.1.BUILD-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>jdbchdfs-local-task-app-dependencies</name>
     <description>Spring Cloud Task JdbcHdfs Local App Dependencies</description>
