--- a/jdbchdfs-local-task-app-dependencies/pom.xml
+++ b/jdbchdfs-local-task-app-dependencies/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.springframework.cloud.task.app</groupId>
     <artifactId>jdbchdfs-local-task-app-dependencies</artifactId>
-    <version>1.2.0.BUILD-SNAPSHOT</version>
+    <version>1.2.0.RC1</version>
     <packaging>pom</packaging>
     <name>jdbchdfs-local-task-app-dependencies</name>
     <description>Spring Cloud Task JdbcHdfs Local App Dependencies</description>
@@ -26,7 +26,7 @@
             <dependency>
                 <groupId>org.springframework.cloud.task.app</groupId>
                 <artifactId>spring-cloud-starter-task-jdbchdfs-local</artifactId>
-                <version>1.2.0.BUILD-SNAPSHOT</version>
+                <version>1.2.0.RC1</version>
             </dependency>
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
